Fix menu to not flicker when hovering

--- a/css/style.sass
+++ b/css/style.sass
@@ -9,6 +9,7 @@
 html > body
     background: #fff
     font-family: "Overpass", "Helvetica Neue", Helvetica, Arial, sans-serif
+    line-height: 1
 
 body
     color: #131313
@@ -61,7 +62,7 @@ body
                 font-size: 1.35rem
                 color: #1c1c1c
                 text-decoration: none
-            &:not(:hover).active
+            &.active
                 margin-right: -0.95rem
                 @include mobile
                     margin-right: 0
